--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -328,6 +328,7 @@
     <ClInclude Include="Memory\doug_lea_allocator.h" />
     <ClInclude Include="Memory\memory_allocator_options.h" />
     <ClInclude Include="Memory\xalloc.h" />
+    <ClInclude Include="Memory\XRayAllocator.hpp" />
     <ClInclude Include="memory_monitor.h" />
     <ClInclude Include="net_utils.h" />
     <ClInclude Include="os_clipboard.h" />
