--- a/src/xrCore/xrCore.vcxproj.filters
+++ b/src/xrCore/xrCore.vcxproj.filters
@@ -737,8 +737,11 @@
     <ClInclude Include="Memory\doug_lea_allocator.h">
       <Filter>Memory\Memory manager\dlmalloc\wrapper</Filter>
     </ClInclude>
+    <ClInclude Include="Memory\XRayAllocator.hpp">
+      <Filter>Memory</Filter>
+    </ClInclude>
     <ClInclude Include="Memory\memory_allocator_options.h">
-      <Filter>Memory\Memory manager\dlmalloc\wrapper</Filter>
+      <Filter>Memory</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
