--- a/src/xrAICore/xrAICore.vcxproj.filters
+++ b/src/xrAICore/xrAICore.vcxproj.filters
@@ -330,9 +330,6 @@
     <ClInclude Include="Navigation\PatrolPath\patrol_path_params_inline.h">
       <Filter>AI\Navigation\PatrolPath\Params</Filter>
     </ClInclude>
-    <ClInclude Include="PCH.hpp">
-      <Filter>Kernel</Filter>
-    </ClInclude>
     <ClInclude Include="Components\problem_solver.h">
       <Filter>AI\Components\ProblemSolver</Filter>
     </ClInclude>
@@ -369,6 +366,9 @@
     <ClInclude Include="AISpaceBase.hpp">
       <Filter>AI</Filter>
     </ClInclude>
+    <ClInclude Include="pch.hpp">
+      <Filter>Kernel</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Navigation\game_graph_script.cpp">
@@ -395,9 +395,6 @@
     <ClCompile Include="Navigation\PatrolPath\patrol_path_params_script.cpp">
       <Filter>AI\Navigation\PatrolPath\Params</Filter>
     </ClCompile>
-    <ClCompile Include="PCH.cpp">
-      <Filter>Kernel</Filter>
-    </ClCompile>
     <ClCompile Include="Components\script_world_state_script.cpp">
       <Filter>AI\Components\ProblemSolver\ConditionState\ScriptWorldState</Filter>
     </ClCompile>
@@ -406,6 +403,9 @@
     </ClCompile>
     <ClCompile Include="AISpaceBase.cpp">
       <Filter>AI</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>Kernel</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
